# care-plan-generator

./: .gitignore  README.md  careplan.md  careplan_design_doc_1.md  day2.md  day3.md  docker-compose.yml  prometheus.yml  schema.sql
backend/: .coverage  .env.example  Dockerfile  manage.py  mock_data.sql  pyproject.toml  pytest.ini  requirements.txt  worker.py.ignore
backend/apps/care_plans/: __init__.py  admin.py  models.py  prompts.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/core/: __init__.py  exceptions.py  urls.py  validators.py
backend/apps/orders/: admin.py  models.py  services.py  urls.py  views.py
backend/apps/patients/: models.py  serializers.py  views.py
backend/apps/providers/: serializers.py  urls.py
backend/apps/reports/: services.py  urls.py  views.py
backend/careplan_backend/: celery.py  settings.py  urls.py
backend/config/: __init__.py  celery.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py  test.py
backend/orders/: admin.py  apps.py  exception_handler.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/orders/LLMServices/: __init__.py  base.py  gemini.py  mock.py
backend/orders/adapters/: __init__.py  base.py  clinic_b.py  cvs_web.py  nordic.py  pharmacorp.py
backend/orders/migrations/: 0001_initial.py
backend/orders/tests/: conftest.py  docker_test_commands.txt  test_adapters.py  test_api_intake.py  test_api_orders.py  test_check_order.py  test_check_patient.py  test_check_provider.py
backend/tests/: conftest.py
frontend/: Dockerfile  (+3 more)
(+83 files in other folders)
