[tool.poetry]
name = "care-plan-generator"
version = "0.1.0"
description = "Care Plan Generator for Specialty Pharmacy"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
djangorestframework = "^3.14"
django-cors-headers = "^4.3"
django-environ = "^0.11"
psycopg2-binary = "^2.9"
celery = "^5.3"
redis = "^5.0"
boto3 = "^1.34"
anthropic = "^0.40.0"
openai = "^1.12"
openpyxl = "^3.1"
gunicorn = "^21.2"
whitenoise = "^6.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-django = "^4.8"
pytest-cov = "^4.1"
black = "^24.2"
flake8 = "^7.0"
isort = "^5.13"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
